--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/XiaoLuo01/violet_trailer#readme",
   "dependencies": {
-    "koa": "^2.11.0"
+    "ejs": "^3.0.1",
+    "koa": "^2.11.0",
+    "pug": "^2.0.4"
   }
 }
