--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "koa": "^2.11.0",
     "koa-views": "^6.2.1",
     "pug": "^2.0.4",
-    "puppeteer": "^2.0.0"
+    "puppeteer": "^2.0.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8"
   }
 }
