--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "ejs": "^3.0.1",
     "koa": "^2.11.0",
     "koa-views": "^6.2.1",
+    "nanoid": "^2.1.10",
     "pug": "^2.0.4",
     "puppeteer": "^2.0.0",
+    "qiniu": "^7.3.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8"
   }
