--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.0.1",
     "koa": "^2.11.0",
     "koa-views": "^6.2.1",
+    "mongoose": "^5.8.9",
     "nanoid": "^2.1.10",
     "pug": "^2.0.4",
     "puppeteer": "^2.0.0",
