--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.0.1",
     "glob": "^7.1.6",
     "koa": "^2.11.0",
+    "koa-router": "^8.0.6",
     "koa-views": "^6.2.1",
     "mongoose": "^5.8.9",
     "nanoid": "^2.1.10",
