--- a/package.json
+++ b/package.json
@@ -28,22 +28,24 @@
     "koa": "^2.11.0",
     "koa-router": "^8.0.6",
     "koa-views": "^6.2.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.8.9",
     "nanoid": "^2.1.10",
     "pug": "^2.0.4",
     "puppeteer": "^2.0.0",
     "qiniu": "^7.3.0",
+    "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.8.3",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
