--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "用 koa2 框架搭建的一个预告片网站",
   "main": "server/index.js",
   "scripts": {
-    "start": "node server/index.js",
+    "dev": "rimraf dist && rimraf .cache && nodemon ./start.js",
     "build": "rimraf dist && parcel build src/index.html --no-cache -d dist --public-url /",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +28,7 @@
     "glob": "^7.1.6",
     "koa": "^2.11.0",
     "koa-router": "^8.0.6",
+    "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.9",
@@ -52,8 +53,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^7.0.0",
     "cssnext": "^1.8.4",
     "node-sass": "^4.13.1",
+    "nodemon": "^2.0.2",
     "parcel-bundler": "^1.12.4"
   }
 }
