--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/XiaoLuo01/violet_trailer#readme",
   "dependencies": {
     "antd": "^3.0.0",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "ejs": "^3.0.1",
     "glob": "^7.1.6",
