--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.9",
     "nanoid": "^2.1.10",
     "pug": "^2.0.4",
