--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "ejs": "^3.0.1",
     "glob": "^7.1.6",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-logger": "^3.1.0",
     "koa-router": "^8.0.6",
+    "koa-session": "^5.5.1",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "lodash": "^4.17.15",
